--- a/composer.json
+++ b/composer.json
@@ -18,7 +18,8 @@
 		]
     },
     "require": {
-        "vlucas/phpdotenv": "^5.5"
+        "vlucas/phpdotenv": "^5.5",
+        "izniburak/router": "^2.5"
     },
     "require-dev": {
         "symfony/var-dumper": "^6.2"
