--- a/.htaccess
+++ b/.htaccess
@@ -1,8 +1,5 @@
-DirectoryIndex public/index.php
-
-<Files .htaccess>
-order allow,deny
-deny from all
-</Files>
-
-Options All -Indexes
+<IfModule mod_rewrite.c>
+  RewriteEngine on
+  RewriteRule ^$ public/ [L]
+  RewriteRule (.*) public/$1 [L]
+</IfModule>
