--- a/composer.json
+++ b/composer.json
@@ -21,7 +21,8 @@
         "vlucas/phpdotenv": "^5.5",
         "izniburak/router": "^2.5",
         "jenssegers/blade": "^1.4",
-        "rakit/validation": "^1.4"
+        "rakit/validation": "^1.4",
+        "fabpot/goutte": "^4.0"
     },
     "require-dev": {
         "symfony/var-dumper": "^6.2",
