--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "dvlpr1996/php-scraper",
+    "name": "dvlpr1996/php-wiki-scraper",
     "description": "php wikipedia scraper",
     "license": "MIT",
 	"type": "project",
